// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser chars 1`] = `
Program [
  JASSFunction {
    "name": "a",
    "statements": Statements [
      Variable {
        "name": "i",
        "type": "integer",
        "value": 97,
      },
    ],
  },
]
`;

exports[`parser comments multiline 1`] = `
"Program(4) [
  EmptyLine {},
  [String (Comment): ' multi\\\\n\\\\t\\\\t\\\\t\\\\tline\\\\n\\\\t\\\\t\\\\t\\\\tcomments '],
  EmptyLine {},
  EmptyLine {}
]"
`;

exports[`parser comments single line 1`] = `
"Program(3) [
  EmptyLine {},
  [String (Comment): ' single line comment'],
  EmptyLine {}
]"
`;

exports[`parser debug 1`] = `
Program [
  JASSFunction {
    "name": "a",
    "statements": Statements [
      Debug {
        "statement": Variable {
          "name": "i",
          "type": "integer",
          "value": 97,
        },
      },
    ],
  },
]
`;
